# JaiBullet

./: .gitignore  README.md  bullet3.lib  copy_files.jai  generate.jai  module.jai
bullet3-3.24-header-only/: CMakeLists.txt  btApi.h
bullet3-3.24-header-only/Bullet3Collision/BroadPhaseCollision/: b3BroadphaseCallback.h  b3DynamicBvhBroadphase.h
bullet3-3.24-header-only/Bullet3Collision/BroadPhaseCollision/shared/: b3Aabb.h
bullet3-3.24-header-only/Bullet3Collision/NarrowPhaseCollision/: b3CpuNarrowPhase.h
bullet3-3.24-header-only/Bullet3Common/: b3FileUtils.h  b3HashMap.h  b3MinMax.h  b3PoolAllocator.h  b3QuadWord.h  b3Quaternion.h  b3Scalar.h  b3StackAlloc.h
bullet3-3.24-header-only/Bullet3Common/shared/: b3Int4.h  b3Mat3x3.h  b3Quat.h
bullet3-3.24-header-only/Bullet3Dynamics/: b3CpuRigidBodyPipeline.h
bullet3-3.24-header-only/Bullet3Dynamics/ConstraintSolver/: b3FixedConstraint.h  b3Generic6DofConstraint.h  b3PgsJacobiSolver.h  b3Point2PointConstraint.h  b3SolverBody.h
bullet3-3.24-header-only/Bullet3Geometry/: b3GrahamScan2dConvexHull.h
bullet3-3.24-header-only/Bullet3OpenCL/BroadphaseCollision/: b3GpuParallelLinearBvh.h
bullet3-3.24-header-only/Bullet3OpenCL/NarrowphaseCollision/: b3ContactCache.h  b3ConvexHullContact.h  b3ConvexPolyhedronCL.h  b3OptimizedBvh.h  b3TriangleCallback.h  b3VoronoiSimplexSolver.h
bullet3-3.24-header-only/Bullet3OpenCL/ParallelPrimitives/: b3BufferInfoCL.h  b3FillCL.h  b3OpenCLArray.h  b3PrefixScanCL.h  b3RadixSort32CL.h
bullet3-3.24-header-only/Bullet3OpenCL/Raycast/: b3GpuRaycast.h
bullet3-3.24-header-only/Bullet3OpenCL/RigidBody/: b3GpuConstraint4.h  b3GpuGenericConstraint.h  b3GpuNarrowPhaseInternalData.h  b3GpuRigidBodyPipeline.h  b3GpuSolverBody.h  b3GpuSolverConstraint.h  b3Solver.h
bullet3-3.24-header-only/Bullet3Serialize/Bullet2FileLoader/: b3BulletFile.h  b3DNA.h  b3File.h
bullet3-3.24-header-only/BulletCollision/BroadphaseCollision/: btBroadphaseProxy.h  btCollisionAlgorithm.h  btDbvtBroadphase.cpp  btOverlappingPairCache.h  btQuantizedBvh.h
bullet3-3.24-header-only/BulletCollision/CollisionDispatch/: SphereTriangleDetector.h  btBox2dBox2dCollisionAlgorithm.h  btBoxBoxCollisionAlgorithm.h  btCollisionCreateFunc.h  btCollisionDispatcherMt.cpp  btCollisionDispatcherMt.h  btCollisionObjectWrapper.h  btCollisionWorld.h  btCollisionWorldImporter.h  btCompoundCompoundCollisionAlgorithm.cpp  btConvexConcaveCollisionAlgorithm.h  btConvexConvexAlgorithm.h  btDefaultCollisionConfiguration.h  btEmptyCollisionAlgorithm.h  btHashedSimplePairCache.h  btManifoldResult.h  btSimulationIslandManager.h  btSphereBoxCollisionAlgorithm.h  btSphereTriangleCollisionAlgorithm.h
bullet3-3.24-header-only/BulletCollision/CollisionShapes/: btBvhTriangleMeshShape.h  btCollisionShape.h  btConcaveShape.h  btConvex2dShape.h  btConvexPolyhedron.cpp  btConvexPolyhedron.h  btConvexShape.h  btConvexTriangleMeshShape.h  btCylinderShape.h  btEmptyShape.h  btMaterial.h  btMiniSDF.h  btMinkowskiSumShape.h  btPolyhedralConvexShape.h  btScaledBvhTriangleMeshShape.h  btSdfCollisionShape.cpp  btSdfCollisionShape.h  btStaticPlaneShape.h  btTriangleBuffer.h  btTriangleInfoMap.h  btTriangleMeshShape.h  btTriangleShape.h  btUniformScalingShape.h
bullet3-3.24-header-only/BulletCollision/Gimpact/: btClipPolygon.h  btCompoundFromGimpact.h  btContactProcessing.h  btContactProcessingStructs.h  btGImpactBvhStructs.h  btGImpactMassUtil.h  btGImpactQuantizedBvh.h  btGImpactShape.h  btGeometryOperations.h  gim_array.h  gim_basic_geometry_operations.h  gim_bitset.h  gim_box_collision.h  gim_box_set.h  gim_geom_types.h  gim_geometry.h  gim_math.h  gim_pair.h  gim_radixsort.h
bullet3-3.24-header-only/BulletCollision/NarrowPhaseCollision/: btContinuousConvexCollision.h  btConvexPenetrationDepthSolver.h  btGjkEpa3.h  btPointCollector.h  btRaycastCallback.h  btSimplexSolverInterface.h  btSubSimplexConvexCast.h  btVoronoiSimplexSolver.h
bullet3-3.24-header-only/BulletDynamics/Character/: btCharacterControllerInterface.h
bullet3-3.24-header-only/BulletDynamics/ConstraintSolver/: btConeTwistConstraint.h  btContactSolverInfo.h  btGeneric6DofSpringConstraint.h  btHinge2Constraint.h  btHingeConstraint.h  btJacobianEntry.h  btPoint2PointConstraint.h  btSequentialImpulseConstraintSolverMt.cpp  btSliderConstraint.h  btSolverBody.h  btTypedConstraint.h
bullet3-3.24-header-only/BulletDynamics/Dynamics/: btActionInterface.h  btDiscreteDynamicsWorld.cpp  btDiscreteDynamicsWorldMt.cpp  btDynamicsWorld.h  btRigidBody.h  btSimulationIslandManagerMt.cpp
bullet3-3.24-header-only/BulletDynamics/Featherstone/: btMultiBody.h  btMultiBodyConstraintSolver.h  btMultiBodyDynamicsWorld.h  btMultiBodyFixedConstraint.h  btMultiBodyGearConstraint.h  btMultiBodyJointLimitConstraint.h  btMultiBodyLinkCollider.h  btMultiBodyMLCPConstraintSolver.h  btMultiBodySphericalJointMotor.h
bullet3-3.24-header-only/BulletDynamics/MLCPSolvers/: btDantzigLCP.h  btMLCPSolver.h
bullet3-3.24-header-only/BulletSoftBody/: DeformableBodyInplaceSolverIslandCallback.h  btConjugateGradient.h  btConjugateResidual.h  btDefaultSoftBodySolver.h  btDeformableContactConstraint.h  btDeformableGravityForce.h  btDeformableLagrangianForce.h  btDeformableLinearElasticityForce.h  btDeformableMultiBodyConstraintSolver.h  btDeformableMultiBodyDynamicsWorld.h  btKrylovSolver.h  btSoftBodyHelpers.h  btSoftBodyInternals.h  btSoftBodyRigidBodyCollisionConfiguration.h  btSoftBodySolverVertexBuffer.h  btSoftMultiBodyDynamicsWorld.cpp  btSoftRigidDynamicsWorld.cpp  btSoftRigidDynamicsWorld.h  btSoftSoftCollisionAlgorithm.h
bullet3-3.24-header-only/LinearMath/: btAlignedAllocator.h  btConvexHull.h  btConvexHullComputer.h  btCpuFeatureUtility.h  btGrahamScan2dConvexHull.h  btHashMap.h  btImplicitQRSVD.h  btMatrix3x3.h  btMatrixX.h  btMotionState.h  btPolarDecomposition.h  btQuaternion.h  btQuickprof.h  btRandom.h  btSpatialAlgebra.h  btStackAlloc.h  btTransformUtil.h
bullet3-3.24-header-only/clew/: clew.h
example/: main.jai
libs/: CMakeLists.txt
libs/cbullet/: cbullet.cpp  cbullet.h  cbullet_stairs.cpp  cbullet_stairs.h
(+520 files in other folders)
